--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,3 @@
-* {
-  outline: 0;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-}
-
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
 html {
   font: 16px/1.5 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
   -ms-text-size-adjust: 100%;
@@ -22,17 +11,19 @@ body {
 }
 
 .rowser-content-wrapper {
+  box-sizing: border-box;
   text-align: center;
 }
 
 .rowser-report {
   display: inline-block;
+  box-sizing: border-box;
   border-top: transparent;
   border-radius: 2px;
   width: 550px;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18),
               0 4px 15px 0 rgba(0, 0, 0, .15);
-  background-color: #fff;
+  background-color: #ffffff;
   transition: box-shadow .35s cubic-bezier(.25, .46, .45, .94);
 }
 
@@ -41,26 +32,27 @@ body {
               0 6px 20px 0 rgba(0, 0, 0, .19);
 }
 
-.rowser-section {
-}
-
 .rowser-section-header {
+  box-sizing: border-box;
   padding: 15px 25px;
   background-color: #404a58;
 }
 
 .rowser-section-header__headline {
+  box-sizing: border-box;
   margin: 0;
   font-size: 22px;
   letter-spacing: 0.5px;
-  color: #fff;
+  color: #ffffff;
 }
 
 .rowser-section-body {
+  box-sizing: border-box;
   padding: 25px;
 }
 
 .rowser-user-agent {
+  box-sizing: border-box;
   font-size: 17px;
   word-break: break-word;
   color: #fb6362;
@@ -68,12 +60,14 @@ body {
 
 .rowser-section-body-list {
   list-style: none;
+  box-sizing: border-box;
   margin: 25px 0 0;
   padding: 0;
 }
 
 .rowser-section-body-list__item {
   display: block;
+  box-sizing: border-box;
   margin-top: 15px;
 }
 
@@ -83,12 +77,12 @@ body {
 
 .rowser-list-item {
   display: flex;
+  box-sizing: border-box;
   justify-content: space-between;
 }
 
-.rowser-list-item__name {}
-
 .rowser-list-item__result {
-  color: #383535;
+  box-sizing: border-box;
   font-weight: bold;
+  color: #383535;
 }
